--- a/_posts/百度面试总结.md
+++ b/_posts/百度面试总结.md
@@ -1,3 +1,15 @@
+---
+layout:     post
+title:      "百度面试总结"
+subtitle:   " 一次糟糕的经验 "
+date:       2017-06-12 
+author:     "Hzw"
+header-img: "img/post-bg-digital-native.jpg"
+catalog: true
+tags:
+    - 面试总结
+---
+
 # 百度面试总结
 
 ### 前期准备
